add additional keys

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,22 @@
 
 <body>
     <h3>Current Crypto Currency Prices: </h3>
-    <table  class="table table-dark">
+    <table id="dataTable" class="table table-dark">
         <thead>
-          <tr>
+          <tr> 
             <th scope="col">#</th>
+            <th scope="col">image</th>
             <th scope="col">id</th>
             <th scope="col">name</th>
             <th scope="col">symbol</th>
+            <th scope="col">current_price</th>
+            <th scope="col">market_cap</th>
+            <th scope="col">price_change_24h</th>
+            <th scope="col">total_supply</th>
+            <th scope="col">max_supply</th>
+            <th scope="col">circulating_supply</th>
           </tr>
-        </thead>
-        <tbody id="tData">
-            
-        </tbody>     
+        </thead>    
       </table>
     <div>
         <span id="response"></span>
